--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 
     <main>
       <!--foto Londra-->
-
+      <div>
+        <img src="./img/london1.jpg" alt="london eye" />
+        <img src="./img/london2.jpg" alt="london street" />
+        <img src="./img/london3.jpg" alt="london big ben" />
+        <hr />
+      </div>
+      <section>
+        <h2>Le mie spese</h2>
+      </section>
       <!--sezione spese-->
-
+      <section></section>
       <!--sezione cose da fare-->
-
+      <section></section>
       <!--sezione info-->
 
       <!--sezione foto-->
