--- a/index.html
+++ b/index.html
@@ -21,6 +21,71 @@
       </div>
       <section>
         <h2>Le mie spese</h2>
+        <!--tabella spese-->
+        <table>
+          <thead>
+            <tr>
+              <th>
+                Numero
+              </th>
+              <th>
+                Descrizione
+              </th>
+              <th>
+                Costo
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                1
+              </td>
+              <td>
+                Biglietto Aereo
+              </td>
+              <td>
+                120&euro;
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                1
+              </td>
+              <td>
+                Biglietto Aereo
+              </td>
+              <td>
+                120&euro;
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                1
+              </td>
+              <td>
+                Biglietto Aereo
+              </td>
+              <td>
+                120&euro;
+              </td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td>
+                Totale
+              </td>
+              <td></td>
+              <td>
+                360&euro;
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+        <hr />
       </section>
       <!--sezione spese-->
       <section></section>
