--- a/index.html
+++ b/index.html
@@ -88,7 +88,16 @@
         <hr />
       </section>
       <!--sezione spese-->
-      <section></section>
+      <section>
+        <h3>Cose da fare</h3>
+        <ul>
+          <li>Visitare la Tower of London</li>
+          <li>Visitare greenwich</li>
+          <li>Ascoltare un artista di strada a Covent Garden</li>
+          <li>Mangiare il tipico Fish and Chip inglese</li>
+        </ul>
+        <hr />
+      </section>
       <!--sezione cose da fare-->
       <section></section>
       <!--sezione info-->
