--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <img src="./img/london3.jpg" alt="london big ben" />
         <hr />
       </div>
+      <!--sezione spese-->
       <section>
         <h2>Le mie spese</h2>
         <!--tabella spese-->
@@ -87,7 +88,7 @@
         </table>
         <hr />
       </section>
-      <!--sezione spese-->
+      <!--sezione cose da fare-->
       <section>
         <h3>Cose da fare</h3>
         <ul>
@@ -98,10 +99,44 @@
         </ul>
         <hr />
       </section>
-      <!--sezione cose da fare-->
-      <section></section>
       <!--sezione info-->
-
+      <section>
+        <h3>Info utili:</h3>
+        <ol>
+          <li>
+            Numeri utili di emergenza
+            <ul>
+              <li><strong>999</strong> - Emergenza</li>
+              <li><strong>101</strong> - Numero polizia</li>
+              <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+          </li>
+          <li>
+            Hotel
+            <ul>
+              <li><strong>Nome Hotel: </strong>Buckingham Palace</li>
+              <li>
+                <strong>Indirizzo Hotel: </strong>Westminster, London SW1A
+                1AA,Regno unito
+              </li>
+            </ul>
+          </li>
+          <li>
+            Aereo
+            <ul>
+              <li>
+                <strong>Volo di andata: </strong>YI234X, ore 9.30 da Milano
+                Malpensa
+              </li>
+              <li>
+                <strong>Volo di andata: </strong>YI236X, ore 18.30 da London
+                Heathrow
+              </li>
+            </ul>
+          </li>
+        </ol>
+        <hr />
+      </section>
       <!--sezione foto-->
     </main>
   </body>
