--- a/index.html
+++ b/index.html
@@ -152,5 +152,8 @@
         <hr />
       </section>
     </main>
+    <footer>
+      <em>Create by Matteo Liberati</em>
+    </footer>
   </body>
 </html>
