--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
             Aereo
             <ul>
               <li>
-                <strong>Volo di andata: </strong>YI234X, ore 9.30 da Milano
+                <strong>Volo di Andata: </strong>YI234X, ore 9.30 da Milano
                 Malpensa
               </li>
               <li>
-                <strong>Volo di andata: </strong>YI236X, ore 18.30 da London
+                <strong>Volo di Ritorno: </strong>YI236X, ore 18.30 da London
                 Heathrow
               </li>
             </ul>
